Exercise_5.71/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_11\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Ricker\Documents\Ncmc\2015 NCMC Winter Classes\CIS 225 A\CIS_225_Book_Exercises\CH_5\Exercise_5.71
-d
C:\Users\Ricker\Documents\Ncmc\2015 NCMC Winter Classes\CIS 225 A\CIS_225_Book_Exercises\CH_5\Exercise_5.71\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Ricker\Documents\Ncmc\2015 NCMC Winter Classes\CIS 225 A\CIS_225_Book_Exercises\CH_5\Exercise_5.71\NameGenerator.java
<---- end of javadoc command ---->
Loading source file C:\Users\Ricker\Documents\Ncmc\2015 NCMC Winter Classes\CIS 225 A\CIS_225_Book_Exercises\CH_5\Exercise_5.71\NameGenerator.java...
C:\Users\Ricker\Documents\Ncmc\2015 NCMC Winter Classes\CIS 225 A\CIS_225_Book_Exercises\CH_5\Exercise_5.71\NameGenerator.java:21: error: <identifier> expected
        newFirst = firstName.
                             ^
C:\Users\Ricker\Documents\Ncmc\2015 NCMC Winter Classes\CIS 225 A\CIS_225_Book_Exercises\CH_5\Exercise_5.71\NameGenerator.java:24: error: reached end of file while parsing
}
 ^
2 errors
